--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "start": "node index.js",
     "dev": "nodemon index.js --watch ./",
     "generate-session": "node session-generator.js",
+    "fix-deps": "npm install --legacy-peer-deps",
     "fix-session": "rm -rf session_* creds.json",
     "lint": "eslint .",
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@itsukichan/baileys@latest",
+    "@whiskeysockets/baileys": "npm:@itsukichan/baileys@6.4.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "ffmpeg-static": "^5.1.0",
     "pino": "^8.17.0",
     "qrcode-terminal": "^0.12.1",
-    "sharp": "^0.33.3",
+    "sharp": "0.33.3",
     "mongodb": "^6.3.0",
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
@@ -40,7 +41,7 @@
     "multi-device",
     "automation"
   ],
-  "author": "YourName",
+  "author": "Arslan-MD",
   "license": "MIT",
   "repository": {
     "type": "git",
