--- a/package.json
+++ b/package.json
@@ -6,23 +6,19 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js --watch ./",
+    "dev": "nodemon index.js",
     "generate-session": "node session-generator.js",
     "fix-deps": "npm install --legacy-peer-deps",
     "fix-session": "rm -rf session_* creds.json"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.4.0",
+    "@whiskeysockets/baileys": "6.2.8",
+    "sharp": "0.30.7",
     "axios": "^1.6.7",
-    "dotenv": "^16.4.1",
-    "ffmpeg-static": "^5.1.0",
-    "pino": "^8.17.0",
     "qrcode-terminal": "^0.12.1",
-    "sharp": "0.33.3",
-    "mongodb": "^6.3.0",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "crypto-js": "^4.1.1"
+    "ffmpeg-static": "^5.1.0",
+    "dotenv": "^16.4.1",
+    "pino": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
