--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "fix-deps": "npm install --force"
+    "fix-deps": "npm install --legacy-peer-deps --registry=https://registry.npmjs.org/"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.4.0",
     "sharp": "0.30.7",
-    "qrcode-terminal": "^0.12.1",
-    "axios": "^1.6.7"
+    "qrcode-terminal": "0.12.0",
+    "axios": "1.6.2",
+    "dotenv": "16.3.1"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
