--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "fix-deps": "npm install --legacy-peer-deps --registry=https://registry.npmjs.org/"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.4.0",
-    "sharp": "0.30.7",
+    "pino": "8.17.0",
     "qrcode-terminal": "0.12.0",
-    "axios": "1.6.2",
-    "dotenv": "16.3.1"
+    "sharp": "0.30.7"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "18.x"
   }
 }
